--- a/10 Feb 2023/index.html
+++ b/10 Feb 2023/index.html
@@ -27,7 +27,12 @@
                     <h3>Hi Everyone</h3>
                 </div>
                 <div class="intro-line-2">
+div
                     <h1>
+</header>
+    <main>
+        <section class="projects">
+            <div>
                         Mark Anderson
                     </h1>
                     <h2>
